add section footer

--- a/index.html
+++ b/index.html
@@ -274,6 +274,42 @@
     <br><br><br><br>
   </div>
   </div>
+  <!-- Footer -->
+  <footer class="footer">
+    <div class="row">
+        <div class="col-lg-3 list-footer justify-content-center">
+            <h4>Lists</h4>
+            <ul>
+                <li><a href="">HOME</a></li>
+                <li><a href="">ABOUT US</a> </li>
+                <li><a href="">SERVICES</a></li>
+            </ul>
+        </div>
+        <div class="col-6 col-md-6 col-lg-3 social-media">
+            <h4>Social media</h4>
+            <ul>
+                <li>
+                    <img src="./assets/images/facebook.svg" alt="">
+                    <a href="" target="_blank">facebook</a>
+                </li>
+                <li>
+                    <img src="./assets/images/instagram.svg" alt="">
+                    <a href="" target="_blank">instagram</a>
+                </li>
+                <li>
+                    <img src="./assets/images/twitter.svg" alt="">
+                    <a href="">
+                        <a href="" target="_blank">twitter</a>
+                    </a>
+                </li>
+            </ul>
+        </div>
+        <div class="col-6 col-md-4 col-lg-3 footer-logo">
+            <h1>Little-Wish</h1>
+        </div>
+    </div>
+</footer>
+  <!-- Footer-end -->
 </body>
 
 </html>
