--- a/index.html
+++ b/index.html
@@ -274,6 +274,51 @@
     <br><br><br><br>
   </div>
   </div>
+  <!-- Form>-->
+  <section id="client" class="pt-3 pb-3 jhimy">
+    <div class="container">
+      <div class="row">
+        <div class="col text-uppercase text-center">
+          <small>Conviértete en un</small>
+          <h2>Orador</h2>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col text-center">
+          Anótate como orador para dar una <abbr data-toggle="tooltip" title="Charlas de 5 minutos">charla ignite</abbr>.
+          Cuéntanos de qué quieres hablar!
+        </div>
+      </div>
+      <div class="row">
+        <div class="col col-md-10 offset-md-1 col-lg-8 offset-lg-2 pt-2">
+          <form>
+            <div class="form-row">
+              <div class="form-group col-12 col-md-6 col-lg-3" >
+                <input type="text" class="form-control" placeholder="Nombre">
+              </div>
+              <div class="form-group col-12 col-md-6 col-lg-3">
+                <input type="text" class="form-control" placeholder="Apellido">
+              </div>
+            </div>
+            <div class="form-row">
+              <div class="form-group col">
+                <textarea name="text" class="form-control form-control-lg" placeholder="Sobre qué quieres hablar?"></textarea>
+                <small class="form-text text-muted">
+                  Recuerda incluir un título para tu charla
+                </small>
+              </div>
+            </div>
+            <div class="form-row">
+              <div class="col">
+                <button type="button" class="btn btn-platzi btn-block">Enviar</button>
+              </div>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- /Conviértete en orador -->
   <!-- Footer -->
   <footer class="footer">
     <div class="row">
@@ -310,6 +355,8 @@
     </div>
 </footer>
   <!-- Footer-end -->
+
+  
 </body>
 
 </html>
