--- a/index.html
+++ b/index.html
@@ -279,14 +279,13 @@
     <div class="container">
       <div class="row">
         <div class="col text-uppercase text-center">
-          <small>Conviértete en un</small>
-          <h2>Orador</h2>
+          <small>CONTACTANOS</small>
+          <h2>¿Quieres ampliar tu negocio o quieres trabajar como desarrollador web?</h2>
         </div>
       </div>
       <div class="row">
         <div class="col text-center">
-          Anótate como orador para dar una <abbr data-toggle="tooltip" title="Charlas de 5 minutos">charla ignite</abbr>.
-          Cuéntanos de qué quieres hablar!
+          Dejanos tus <abbr data-toggle="tooltip" title="Datos personalea">datos</abbr> o llamanos al +51 934 745 236
         </div>
       </div>
       <div class="row">
@@ -302,9 +301,9 @@
             </div>
             <div class="form-row">
               <div class="form-group col">
-                <textarea name="text" class="form-control form-control-lg" placeholder="Sobre qué quieres hablar?"></textarea>
+                <textarea name="text" class="form-control form-control-lg" placeholder="Cometario"></textarea>
                 <small class="form-text text-muted">
-                  Recuerda incluir un título para tu charla
+                  Recuerda incluir un comentario al final
                 </small>
               </div>
             </div>
