--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
       <div class="col">
         <div class="bg-success">
           <br><br><br>
-          <h1>Plan Expert</h1>
+          <h1>Plan Experit</h1>
           <br><br><br>
           <li>Encuentra un proyecto en menos de un día</li>
           <li>Brindar asesorias pagadas</li>
