--- a/index.html
+++ b/index.html
@@ -274,6 +274,72 @@
     <br><br><br><br>
   </div>
   </div>
+   <!-- Speakers -->
+   <section id="speakers" class="mt-4">
+    <div class="container">
+      <div class="row">
+        <div class="col text-center text-uppercase">
+          <small>Conoce a los</small>
+          <h2>Oradores</h2>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-12 col-md-6 col-lg-4 mb-4">
+          <div class="card">
+            <img class="card-img-top" src="./assets/images/imagen2.jpg" alt="Foto de Sacha">
+            <div class="card-body">
+              <div class="badges">
+                <span class="badge badge-warning">JavaScript</span>
+                <span class="badge badge-info">React</span>
+              </div>
+              <h5 class="card-title">Sacha Lifszyc</h5>
+              <p class="card-text">Vivamus quam mi, egestas eu metus id, mollis suscipit ipsum. In vel mollis mauris. Nunc id sem a lacus tincidunt pretium in in urna. Nam mi nisi, tincidunt ac tincidunt id, fermentum at metus.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-md-6 col-lg-4 mb-4">
+          <div class="card">
+            <img class="card-img-top" src="./assets/images/imagen2.jpg" alt="Foto de Sacha">
+            <div class="card-body">
+              <div class="badges">
+                <span class="badge badge-warning">JavaScript</span>
+                <span class="badge badge-info">React</span>
+              </div>
+              <h5 class="card-title">Leonidas Esteban</h5>
+              <p class="card-text">Vivamus quam mi, egestas eu metus id, mollis suscipit ipsum. In vel mollis mauris. Nunc id sem a lacus tincidunt pretium in in urna. Nam mi nisi, tincidunt ac tincidunt id, fermentum at metus.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-md-6 col-lg-4 mb-4">
+          <div class="card">
+            <img class="card-img-top" src="./assets/images/imagen2.jpg" alt="Foto de Sacha">
+            <div class="card-body">
+              <div class="badges">
+                <span class="badge badge-secondary">Negocios</span>
+                <span class="badge badge-danger">Startups</span>
+              </div>
+              <h5 class="card-title">Freddy Vega</h5>
+              <p class="card-text">Vivamus quam mi, egestas eu metus id, mollis suscipit ipsum. In vel mollis mauris. Nunc id sem a lacus tincidunt pretium in in urna. Nam mi nisi, tincidunt ac tincidunt id, fermentum at metus.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-md-6 col-lg-4 mb-4">
+          <div class="card">
+            <img class="card-img-top" src="./assets/images/imagen2.jpg" alt="Foto de Sacha">
+            <div class="card-body">
+              <div class="badges">
+                <span class="badge badge-secondary">Negocios</span>
+                <span class="badge badge-danger">Startups</span>
+              </div>
+              <h5 class="card-title">Christian Van Der H.</h5>
+              <p class="card-text">Vivamus quam mi, egestas eu metus id, mollis suscipit ipsum. In vel mollis mauris. Nunc id sem a lacus tincidunt pretium in in urna. Nam mi nisi, tincidunt ac tincidunt id, fermentum at metus.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- /Speakers -->
   <!-- Footer -->
   <footer class="footer">
     <div class="row">
