--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
       <div class="row">
         <div class="col-12 col-md-6 col-lg-4 mb-4">
           <div class="card">
-            <img class="card-img-top" src="./assets/images/imagen2.jpg" alt="Foto de Sacha">
+            <img class="card-img-top" src="./assets/images/Fabrizio.jpg" alt="Foto de Sacha">
             <div class="card-body">
               <div class="badges">
                 <span class="badge badge-warning">JavaScript</span>
