--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
           <a href="" class="nav-link active">Home</a>
           <a href="#traders" class="nav-link">Traders</a>
           <a href="#developers" class="nav-link">Developers</a>
+          <a href="#speakers" class="nav-link">Nosotros</a>
           <a href="./contactUs.html" class="nav-link">Contact Us</a>
         </div>
       </div>
@@ -279,60 +280,87 @@
     <div class="container">
       <div class="row">
         <div class="col text-center text-uppercase">
-          <small>Conoce a los</small>
-          <h2>Oradores</h2>
+          <small style="color:white;">Conoce a los</small>
+          <h2 style="color:white;">Oradores</h2>
         </div>
       </div>
       <div class="row">
         <div class="col-12 col-md-6 col-lg-4 mb-4">
           <div class="card">
-            <img class="card-img-top" src="./assets/images/Fabrizio.jpg" alt="Foto de Sacha">
+            <img class="card-img-top" src="./assets/images/Fabrizio.jpg" alt="Integrante Fabrizio Lara">
+            <div class="card-body">
+              <div class="badges">
+                <span class="badge badge-warning">C++</span>
+                <span class="badge badge-info">C#</span>
+                <span class="badge badge-info">Html</span>
+                <span class="badge badge-info">CSS</span>
+              </div>
+              <h5 class="card-title">Fabrizio Lara</h5>
+              <p class="card-text">Mi nombre es Fabrizio Lara, tengo 18 años y estoy cursando el cuarto ciclo de la carrera de Ingeniería de Sistemas. Tengo conocimiento en programación básica en idiomas como C++ y C#, Me gusta el trabajo en equipo y hablar para poder llegar a mejores acuerdos y lograr los objetivos propuestos.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-md-6 col-lg-4 mb-4">
+          <div class="card">
+            <img class="card-img-top" src="./assets/images/Carlos.png" alt="Integrante Carlos Gonzales">
             <div class="card-body">
               <div class="badges">
                 <span class="badge badge-warning">JavaScript</span>
-                <span class="badge badge-info">React</span>
+                <span class="badge badge-info">Html</span>
+                <span class="badge badge-info">CSS</span>
+                <span class="badge badge-info">C++</span>
+                <span class="badge badge-info">C#</span>
+                
               </div>
-              <h5 class="card-title">Sacha Lifszyc</h5>
-              <p class="card-text">Vivamus quam mi, egestas eu metus id, mollis suscipit ipsum. In vel mollis mauris. Nunc id sem a lacus tincidunt pretium in in urna. Nam mi nisi, tincidunt ac tincidunt id, fermentum at metus.</p>
+              <h5 class="card-title">Carlos Gonzales</h5>
+              <p class="card-text">Soy Carlos Gonzalez, tengo 19 años y actualmente estoy cursando el 4to ciclo de la carrera de Ingeniería de sistemas. Las principales habilidades que poseo es ser responsable, siempre presentar puntualmente los trabajos y aportar ideas al grupo. Además de tener conocimientos de programación en C++ y C#.</p>
             </div>
           </div>
         </div>
         <div class="col-12 col-md-6 col-lg-4 mb-4">
           <div class="card">
-            <img class="card-img-top" src="./assets/images/imagen2.jpg" alt="Foto de Sacha">
+            <img class="card-img-top" src="./assets/images/Fabrizio2.jpg" alt="Integrante Fabrizio Vega">
+            <div class="card-body">
+              <div class="badges">
+                <span class="badge badge-warning">C++</span>
+                <span class="badge badge-info">C#</span>
+                <span class="badge badge-info">Html</span>
+                <span class="badge badge-info">CSS</span>
+              </div>
+              <h5 class="card-title">Fabrizio Vega</h5>
+              <p class="card-text">Me llamo Fabrizio, actualmente cursando el 4to semestre de mi Carrera de Ing. De sistemas en la Universidad Peruana de Ciencias Aplicadas. Tengo conocimientos en conocimiento de tecnologías como programación, además de haber cursado el curso de análisis el cual me brindo conocimientos acerca de las necesidades de un público objetivo </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-md-6 col-lg-4 mb-4">
+          <div class="card">
+            <img class="card-img-top" src="./assets/images/Fredy.jpg" alt="Integrante Fredy Almeyda">
             <div class="card-body">
               <div class="badges">
                 <span class="badge badge-warning">JavaScript</span>
-                <span class="badge badge-info">React</span>
+                <span class="badge badge-info">Html</span>
+                <span class="badge badge-info">CSS</span>
+                <span class="badge badge-info">C++</span>
+                <span class="badge badge-info">C#</span>
               </div>
-              <h5 class="card-title">Leonidas Esteban</h5>
-              <p class="card-text">Vivamus quam mi, egestas eu metus id, mollis suscipit ipsum. In vel mollis mauris. Nunc id sem a lacus tincidunt pretium in in urna. Nam mi nisi, tincidunt ac tincidunt id, fermentum at metus.</p>
+              <h5 class="card-title">Fredy Almeyda</h5>
+              <p class="card-text">Elegí la carrera de Ingeniería de Software porque desde muy pequeño me llama la atención todo lo relacionado a la tecnología, sobre todo la lógica detrás de ello. Me gusta innovar y dar nuevas soluciones a distintos problemas.</p>
             </div>
           </div>
         </div>
         <div class="col-12 col-md-6 col-lg-4 mb-4">
           <div class="card">
-            <img class="card-img-top" src="./assets/images/imagen2.jpg" alt="Foto de Sacha">
+            <img class="card-img-top" src="./assets/images/Jhimy.jpg" alt="Integrante Jhimy Diestra">
             <div class="card-body">
               <div class="badges">
-                <span class="badge badge-secondary">Negocios</span>
-                <span class="badge badge-danger">Startups</span>
+                <span class="badge badge-warning">JavaScript</span>
+                <span class="badge badge-info">Html</span>
+                <span class="badge badge-info">CSS</span>
+                <span class="badge badge-info">C++</span>
+                <span class="badge badge-info">C#</span>
               </div>
-              <h5 class="card-title">Freddy Vega</h5>
-              <p class="card-text">Vivamus quam mi, egestas eu metus id, mollis suscipit ipsum. In vel mollis mauris. Nunc id sem a lacus tincidunt pretium in in urna. Nam mi nisi, tincidunt ac tincidunt id, fermentum at metus.</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-12 col-md-6 col-lg-4 mb-4">
-          <div class="card">
-            <img class="card-img-top" src="./assets/images/imagen2.jpg" alt="Foto de Sacha">
-            <div class="card-body">
-              <div class="badges">
-                <span class="badge badge-secondary">Negocios</span>
-                <span class="badge badge-danger">Startups</span>
-              </div>
-              <h5 class="card-title">Christian Van Der H.</h5>
-              <p class="card-text">Vivamus quam mi, egestas eu metus id, mollis suscipit ipsum. In vel mollis mauris. Nunc id sem a lacus tincidunt pretium in in urna. Nam mi nisi, tincidunt ac tincidunt id, fermentum at metus.</p>
+              <h5 class="card-title">Jhimy Diestra</h5>
+              <p class="card-text"><p>Mi nombre es Jhimy Diestra, tengo 22 años y soy estudiante universitario de la Universidad Peruana de Ciencias Aplicadas. Estudio la carrera de Ingeniera de Sistemas de información y actualmente estoy en mi 5to semestre de la carrera. Tengo conocimiento básico en C++, C#, HTML, CSS y JavaScript. Además, me gusta trabajar en equipo y crear soluciones a distintos problemas que se me presenten.</p>
             </div>
           </div>
         </div>
